test fix canvas on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@ body {
   font-family: 'Lato', sans-serif;
 }
 
+main {
+  background-color: #050810;
+}
+
 p {
   font-family: 'Roboto', sans-serif;
 }
